force-app/main/default/objects/Account/fields/Change_History__c.field-meta.xml
<CustomField>
    <fullName>Change_History__c</fullName>
    <label>Change History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>