force-app/main/default/objects/Account/fields/Old_Description__c.field-meta.xml
<CustomField>
    <fullName>Old_Description__c</fullName>
    <label>Old Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>