force-app/main/default/objects/Account/fields/PTest__c.field-meta.xml
<CustomField>
    <fullName>PTest__c</fullName>
    <label>PTest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>